[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-server",
    "crates/*",
]

[workspace.package]
version = "2.1.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2", "numeric", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
rusqlite = { version = "0.34", features = ["bundled"] }
r2d2 = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1"
anyhow = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Numbers
rust_decimal = { version = "1.39", features = ["maths", "serde-float"] }
rust_decimal_macros = "1.39"
num-traits = "0.2"

# Async
async-trait = "0.1"
futures = "0.3"

# Logging
log = "0.4"

# Internal crates
wealthfolio-core = { path = "crates/core" }
wealthfolio-connect = { path = "crates/connect" }
wealthfolio-storage-sqlite = { path = "crates/storage-sqlite" }
