[package]
name = "wealthfolio-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
wealthfolio-core = { workspace = true }
wealthfolio-connect = { workspace = true }
wealthfolio-storage-sqlite = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["json", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout", "request-id", "fs"] }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# Additional dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
dotenvy = "0.15"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
serde_with = "3"
serde_urlencoded = "0.7"
base64 = "0.21"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
semver = "1"
hyper = { version = "0.14", features = ["full"] }

[features]
default = []

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
