[package]
name = "wealthvn"
version = "1.0.0"
description = "A Portfolio Tracker for Vietnamese Market"
authors = ["chipheo00"]
license = "AGPL-3.0"
repository = "https://github.com/chipheo00/vn-wealthfolio"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
wealthvn_core = { path = "../src-core" }
diesel = { version = "2.2", features = ["sqlite", "chrono", "r2d2", "numeric", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "sync"] }
keyring = "2.0"
uuid = { version = "1.0", features = ["v4"] }
local-ip-address = "0.6"
hostname = "0.3"
anyhow = "1"
base64 = "0.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
appstore = [] # Feature flag for App Store builds
# wealthfolio-pro = ["wealthfolio_core/wealthfolio-pro"]

[lib]
name = "wealthvn_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-haptics = "2"
