[package]
name = "wealthfolio-ai-assistant"
version.workspace = true
edition.workspace = true
description = "AI assistant orchestration using rig-core for Wealthfolio"
authors = ["Aziz Fadil"]
license = "AGPL-3.0"
repository = "https://github.com/afadil/wealthfolio"

[features]
default = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

# LLM orchestration
rig-core = "0.28"

# Streaming
tokio-stream = "0.1"

# Sibling crates
wealthfolio-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
