[package]
name = "wealthfolio-ai"
version.workspace = true
edition.workspace = true
description = "AI assistant with LLM orchestration using rig-core for Wealthfolio"
authors = ["Aziz Fadil"]
license = "AGPL-3.0"
repository = "https://github.com/afadil/wealthfolio"

[features]
default = []

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }

# LLM orchestration (rig-core crate exports as "rig")
rig = { package = "rig-core", version = "0.29" }

# Lazy static initialization
once_cell = "1"

# Streaming
tokio-stream = "0.1"

# Numbers (for Decimal to f64 conversion)
rust_decimal = { workspace = true }

# Sibling crates
wealthfolio-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
