[package]
name = "wealthfolio-market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2"
time = "0.3"
tracing = "0.1"
yahoo_finance_api = "2"
num-traits = "0.2"

[dev-dependencies]
rust_decimal_macros = "1"
