[package]
name = "wealthfolio-market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
urlencoding = "2"
yahoo_finance_api = "4.1"
lazy_static = "1.4"

[dev-dependencies]
rust_decimal_macros = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
